--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,10 @@ project(zyerr C)
 
 set(CMAKE_C_STANDARD 23)
 
-include_directories(zyalloc/src)
+include_directories(zyalloc dequeue)
 
-add_library(zyerr src/zyerr.c
-        zyalloc/src/zyalloc.c)
+file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.c)
+
+set(SOURCES ${SOURCES})
+
+add_library(${CMAKE_PROJECT_NAME} STATIC ${SOURCES})
